--- a/industry.html
+++ b/industry.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Overall U.S. GDP Trends by Industry</title>
+    <title>Impact of Key Economic Events on the GDP of U.S. various Industries (1997-2022)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     
     <style>
