--- a/period1.html
+++ b/period1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Overall U.S. GDP trends</title>
+    <title>U.S. Economic Growth: A Detailed Analysis of GDP from 1997-2005</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     
     <style>
