--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        h1, h3, h4 {
+        h1, h2, h3, h4 {
             color: #0058e6;
         }
         p, li {
@@ -84,9 +84,9 @@
         <section>
             <h1>Tracing the Economic Pulse: A Visual Journey through U.S. GDP (1997-2022)</h1>
             <p>Welcome to "Tracing the Economic Pulse: A Visual Journey through U.S. GDP (1997-2022)". This project endeavors to illuminate the economic landscape of the United States over a quarter of a century, encapsulating periods of both prosperity and challenge. By utilizing interactive line charts, this visualization invites users to explore the comprehensive trends in the U.S. GDP across all industries, and understand the substantial impacts of major national and global events on the American economy.</p>
-            <h3>Explore the process</h3>
+            <h2>Explore the process</h2>
             <p>The first four scenes of this journey—spanning from 1997 to 2022—How major events in the U.S. affect economic upturns and downturns. These visualizations strive to provide a clear, chronological narrative of how such events have influenced economic activities, drawing a vivid picture of resilience and recovery.</p>
-            <h4>Some major events</h4>
+            <h3>Some major events</h3>
             <ul>
                 <li><strong>Tech Boom of the 1990s (1991-2000):</strong> An economic boom driven by the rise of the internet and digital technologies, leading to a significant expansion of new industries and job creation.</li>
                 <li><strong>Dot-com Bubble Burst (2000-2002):</strong> The speculative bubble in internet companies burst, leading to a market crash and a recession.</li>
@@ -98,10 +98,14 @@
                 <li><strong>etc.</strong></li>
             </ul>
             <p>In the final scene of this exploration, users are granted the autonomy to delve deeper into individual industry performances. This interactive feature allows for a more personalized analysis, enabling viewers to uncover how distinct sectors have navigated through the fluctuations of the economy, adapted to changes, and contributed to the overall GDP.</p>
-            <h3>Purpose</h3>
+            <h2>Purpose</h2>
             <p>This project is designed not just for economists or students, but for anyone with an interest in understanding the economic forces that shape our lives. Through these visualizations, we hope to provide insights that are informative, engaging, and accessible to all.</p>
-            <p>Join us on this visual journey to decode the complexities of the economy through the lens of data.</p>
-            <h3>References</h3>
+            <h2>User Guide</h2>
+            <ul>
+                <li><strong>Previous/Next Buttons:</strong> The Previous/Next Buttons move sequentially through the economic periods, facilitating a linear exploration of the data</li>
+                <li><strong>Scene Selection Buttons:</strong> The scene selection buttons, Introduction, 1997-2005, 2006-2010, 2011-2017, 2018-2022, and Industry Trends, jump to a specific scene, providing more control over the navigation and enabling non-linear exploration.</li>
+            </ul>
+            <h2>References</h2>
             <p>All the dataset and information from: <a href="https://www.bea.gov/">Bureau of Economic Analysis (BEA)</a></p>
         </section>
     </div>
