--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <nav>
         <ul>
             <li><a href="#" id="prev-button"><i class="fas fa-chevron-left"></i></a></li>
-            <li><a href="index.html" class="active">Introduction</a></li>
-            <li><a href="period1.html">1997-2005</a></li>
-            <li><a href="period2.html">2006-2010</a></li>
-            <li><a href="period3.html">2011-2017</a></li>
-            <li><a href="period4.html">2018-2022</a></li>
-            <li><a href="industry.html">Industry Trends</a></li>
+            <li><a id="index.html" class="active">Introduction</a></li>
+            <li><a id="period1.html">1997-2005</a></li>
+            <li><a id="period2.html">2006-2010</a></li>
+            <li><a id="period3.html">2011-2017</a></li>
+            <li><a id="period4.html">2018-2022</a></li>
+            <li><a id="industry.html">Industry Trends</a></li>
             <li><a href="#" id="next-button"><i class="fas fa-chevron-right"></i></a></li>
         </ul>
     </nav>
@@ -102,8 +102,7 @@
             <p>This project is designed not just for economists or students, but for anyone with an interest in understanding the economic forces that shape our lives. Through these visualizations, we hope to provide insights that are informative, engaging, and accessible to all.</p>
             <h2>User Guide</h2>
             <ul>
-                <li><strong>Previous/Next Buttons:</strong> The Previous/Next Buttons move sequentially through the economic periods, facilitating a linear exploration of the data</li>
-                <li><strong>Scene Selection Buttons:</strong> The scene selection buttons, Introduction, 1997-2005, 2006-2010, 2011-2017, 2018-2022, and Industry Trends, jump to a specific scene, providing more control over the navigation and enabling non-linear exploration.</li>
+                <li><strong>Previous/Next Buttons:</strong> The previous/next Buttons move sequentially through the economic periods, facilitating a linear exploration of the data</li>
             </ul>
             <h2>References</h2>
             <p>All the dataset and information from: <a href="https://www.bea.gov/">Bureau of Economic Analysis (BEA)</a></p>
@@ -118,6 +117,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const links = document.querySelectorAll('nav ul li a');
+            console.log(links);
             const prevButton = document.getElementById('prev-button');
             const nextButton = document.getElementById('next-button');
             
@@ -131,7 +131,7 @@
             if (activeIndex !== -1) {
                 // Set the previous button link
                 if (activeIndex > 1) {
-                    prevButton.href = links[activeIndex - 1].href;
+                    prevButton.href = links[activeIndex - 1].id;
                 } else {
                     prevButton.href = "#";
                     prevButton.style.pointerEvents = "none";  // Disable the button
@@ -139,7 +139,7 @@
         
                 // Set the next button link
                 if (activeIndex < links.length - 2) {
-                    nextButton.href = links[activeIndex + 1].href;
+                    nextButton.href = links[activeIndex + 1].id;
                 } else {
                     nextButton.href = "#";
                     nextButton.style.pointerEvents = "none";  // Disable the button
